# github-profile-stats-rs

./: .gitignore  Cargo.toml
src/: basicstats.graphql  languages.typ  main.rs  queries.rs  render.rs  repostats.graphql
