[package]
name = "github-profile-stats-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
prettytable-rs = "^0.10.0"
clap = { version = "^4.0", features = ["derive"] }
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
typst-as-lib = { version = "0.15.0", features = ["packages", "reqwest"] }
typst-svg = "0.14.0"
typst-library = "0.14.0"
bincode = "2.0.1"
typst = "0.14.1"

# [patch.crates-io]
# reqwest = { version = "0.12" }
