[package]
name = "github-profile-stats-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
prettytable-rs = "^0.10.0"
clap = { version = "^4.0", features = ["derive"] }
typst-as-lib = { version = "0.15.0", features = ["packages", "reqwest"] }
typst-svg = "0.14.0"
typst-library = "0.14.0"
bincode = "2.0.1"
typst = "0.14.1"
octocrab = "0.49.5"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
color-eyre = { version = "0.6.5", default-features = false }
tokio-stream = { version = "0.1.18", default-features = false }
